# clogic-ai

./: main.py  pyproject.toml
apps/llm/: services.py
apps/rag/: services.py
