[tool.poetry]
name = "ai-introduce-myself"
version = "0.1.0"
description = ""
authors = ["clogic <choiseungil29@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
qdrant-client = "^1.14.2"
sentence-transformers = "^4.1.0"
openai = "^1.79.0"
fastapi = {extras = ["standard"], version = "^0.115.12"}
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
